container-bootcamp/section-11-labs/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lab-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
  namespace: training-lab
spec:
  rules:
    - host: nginx.LABSERVERNAME
      - http:
        paths:
        - path: /
          backend:
            serviceName: lab-nginx-service
            servicePort: 80
